# cs-project-2025-chessnok

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
,github/workflows/: build.yaml
.github/workflows/: build.yaml  check_backend.yml  lint_backend.yml  lint_frontend.yml  test_backend.yml
.pytest_cache/v/cache/: nodeids
backend/: .env.example  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 36c6481c6848_add_sample_teacher_model.py  b8b25c5a0994_add_user_model.py
backend/app/: app.py  main.py
backend/app/api/routes/: __init__.py  ping.py
backend/app/core/: config.py  logger.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  teacher.py  user.py
backend/app/storage/: __init__.py  s3.py
backend/scripts/: init.sh
backend/tests/: test_client.py
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/src/: App.test.jsx
tests/: test_client.py
