[project]
name = "cs-project-2025-chessnok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = []
lint = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
test = [
    "pytest>=8.4.2",
]

[tool.isort]
profile="black"
skip = ["alembic", ".venv"]
